--- a/static/admin/css/base.css
+++ b/static/admin/css/base.css
@@ -771,7 +771,7 @@ table#change-history tbody th {
 
 #container {
     position: relative;
-    width: 100%;
+/*    width: 100%;*/
     min-width: 980px;
     padding: 0;
 }
