--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -8,10 +8,6 @@ html {
 body {
     background-color: #ecf2f6;
 }
-table {
-    width: 100%;
-    background-color: #fff;
-}
 .headline {
     text-align: left;
     margin-bottom: 2em;
@@ -32,59 +28,39 @@ table {
     text-align: left;
     width: 200px;
 }
-thead th {
-    text-align: left;
-}
 h1 {
     text-align: center;
 }
 .content {
-  padding-left: 19rem;
+  padding-left: 1.42857rem;
   padding-top: 20px;
   padding-right: 1rem;
+}
+.content #results {
+    margin-right: 280px;
 }
 .sidebar {
   position: fixed;
   width: 17.85714rem;
   top: 0;
-  left: 0;
+  left:0;
   bottom: 0;
   z-index: 6;
   background: #59677e;
   color: #fff;
   transition: background-color .3s, transform .3s;
 }
-
 .sidebar-section {
-    border-bottom: 1px solid #555;
-    transition: border-bottom-color 0.3s;
+  padding-bottom: 0;
 }
 .sidebar-title {
-    display: block;
     color: #dbe0e7;
-    text-transform: uppercase;
-    font-size: 11px;
-    font-size: 0.78571rem;
-    font-weight: bold;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    padding: 0 14px 0 24px;
-    padding: 0 1rem 0 1.71429rem;
-    margin-bottom: 10px;
-    margin-bottom: 0.71429rem;
-    transition: color .3s;
 }
 .sidebar-title-link, .sidebar-title-link:visited, .sidebar-title-link:hover {
     color: #dbe0e7;
-    font-weight: bold;
-    transition: color .3s;
 }
 .sidebar a:link {
     color: #dbe0e7;
-    display: block;
-    padding: 16px 16px;
-    text-decoration: none;
 }
 .sidebar a:link:active {
     background-color: #555;
@@ -93,38 +69,6 @@ h1 {
 .sidebar a:link:hover:not(.active) {
     background-color: #555;
     color: #dbe0e7;
-}
-.sidebar-link, .sidebar-link:visited, .sidebar-link:hover {
-    display: block;
-    color: #dbe0e7;
-    padding: 8px 12px 8px 20px;
-    padding: 0.57143rem 0.85714rem 0.57143rem 1.42857rem;
-    vertical-align: middle;
-    transition: color .3s,background-color .3s;
-    position: relative;
-}
-.sidebar-link-label {
-    vertical-align: middle;
-    display: block;
-    transition: -webkit-transform .3s;
-    transition: transform .3s;
-    transition: transform .3s, -webkit-transform .3s;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    color: #dbe0e7;
-}
-.sidebar-right-arrow {
-    color: #639af5;
-    font-size: 16px;
-    font-size: 1.14286rem;
-    font-weight: bold !important;
-    transition: color .3s,opacity .3s;
-}
-.sidebar-right {
-    float: right;
-    margin-left: 10px;
-    margin-left: 0.71429rem;
 }
 #branding {
     background-color: #639af5;
@@ -151,10 +95,6 @@ h1 {
     vertical-align: middle;
 
 }
-.padding0 {
-    padding-top: 0;
-}
-
 .aligned label {
     display: block;
     padding: 8px 10px 0 0;
@@ -175,6 +115,42 @@ h1 {
     margin-left: 12.14286rem;
 
 }
+/*
 .module {
     padding-left: 20px;
 }
+*/
+/*
+.results {
+    margin-right: 200px;
+    width: auto;
+}
+*/
+.user-tools ul {
+    top: 0.78571rem;
+}
+#title {
+    text-align: center;
+}
+#header {
+	display: block;
+}
+.logo {
+	background-color: white;
+	padding-left: 15px;
+}
+.object-tools a.addlink {
+    background-image: none;
+}
+.submit-row a.deletelink {
+    height: auto;
+}
+#changelist table thead th {
+    padding: 10px 10px;
+}
+/*
+#changelist .results {
+    margin-right: 280px;
+    width: auto;
+}
+*/
