--- a/Tour/templates/Tour/tour_add.html
+++ b/Tour/templates/Tour/tour_add.html
@@ -3,35 +3,33 @@
 {% block title %}<title>Tour hinzufügen</title>{% endblock %}
 {% block content %}
 <div id="content-main">
-<form action="" method="post">
-    {% csrf_token %}
-    {{ wizard.management_form }}
-    {{ form.non_field_errors }}
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ wizard.management_form }}
+        {{ form.non_field_errors }}
 
-    {% for hidden_field in form.hidden_fields %}
-        {{ hidden_field.errors }}
-        {{ hidden_field }}
-    {% endfor %}
-    <table>
-        {% for field in form.visible_fields %}
-        <tr>
-            <th>
-                <label {% if field.field.required %}  class=required{% endif %}>{{ field.label }}</label>
-            </th>
-            <td>
-                {{ field.errors }}
-                {{ field }}
-            <p class="help">{{ field.help_text }}</p>
-            </td>
-        </tr>
+        {% for hidden_field in form.hidden_fields %}
+            {{ hidden_field.errors }}
+            {{ hidden_field }}
         {% endfor %}
-    </table>
-    <div class="submit-row">
-        <input type="submit" value="Sichern" class="default" name="_save">
-        <p class="deletelink-box"><a href="delete/" class="deletelink">Löschen</a></p> 
-    </div>
-     
-</form>
+        <div>
+            <fieldset class="module aligned">
+                {% for field in form.visible_fields %}
+                <div class="form-row">
+                    <div>
+                        <label {% if field.field.required %}  class=required{% endif %}>{{ field.label }}</label>
+                        {{ field.errors }}
+                        {{ field }}
+                    </div>
+                </div>
+                {% endfor %}
+            </fieldset>
+        </div>
+        <div class="submit-row">
+            <input type="submit" value="Sichern" class="default" name="_save">
+            <p class="deletelink-box"><a href="delete/" class="deletelink">Löschen</a></p> 
+        </div>
+        
+    </form>
 </div>
-</script>
 {% endblock %}
