--- a/Einsatztage/templates/Einsatztage/fahrer.html
+++ b/Einsatztage/templates/Einsatztage/fahrer.html
@@ -1,33 +1,48 @@
 {% extends 'Basis/header.html' %}
-{% block title %}<title>Fahrer Einsatztage</title>{% endblock %}
+{% load static %}
 {% block content %}
-{% if einsatz_liste %}
-<div class="results">
-    <h1>Fahrer Einsatztage</h1>
-    <table id="result_list">
-        <thead>
-            <th>Datum</th><th>Wochentag</th><th>Team</th><th>Fahrer Vormittag</th><th>Fahrer Nachmittag</th><th>Anzahl Klienten</th><th>Aktionen</th>
-        </thead>    
-    {% for einsatz in einsatz_liste %}
-        <tr>
-            <td><a href="/Einsatztage/{{ einsatz.id }}/">{{ einsatz.datum }}</a></td>
-            <td>{{ einsatz.wochentag }}</td>
-            <td>{{ einsatz.team }}</td>
-            <td>{{ einsatz.fahrer_vormittag|default_if_none:"-" }}</td>
-            <td>{{ einsatz.fahrer_nachmittag|default_if_none:"-" }}</td>
-            <td>{{ einsatz.klienten_anzahl }}</td>
-            <td>
-            {% if einsatz.klienten_anzahl > 0 %}
-                {% load static %}
-                <a href="/Einsatztage/{{ einsatz.id }}/tour/"><img src="{% static "/project/img/fahrplan.png" %}" alt="Tour anzeigen" title="Tour anzeigen"></a>
-                <a href="/Einsatztage/{{ einsatz.id }}/tourAsPDF/"><img src="{% static "/project/img/icon_pdf.png" %}" alt="PDF erzeugen" title="PDF erzeugen"></a>
-            {% else %}
-                &nbsp;
-            {% endif %}
-            </td>
-        </tr>
-    {% endfor %}
-    </table>
+<div id="content-main">
+    {% if einsatz_liste %}  
+    <div id="changelist" class="module filtered">
+        <div id="toolbar"></div>
+        <form id="changelist-form">
+            <div class="results">
+                <table id="result_list">
+                    <thead>
+                        <th>Datum</th><th>Wochentag</th><th>Team</th><th>Fahrer Vormittag</th><th>Klienten Vormittag</th><th>Fahrer Nachmittag</th><th>Klienten Nachmittag</th><th>Aktionen</th>
+                    </thead>    
+                {% for einsatz in einsatz_liste %}
+                    <tr>
+                        <td><a href="/Einsatztage/fahrer/{{ einsatz.id }}/">{{ einsatz.datum }}</a></td>
+                        <td>{{ einsatz.wochentag }}</td>
+                        <td>{{ einsatz.team }}</td>
+                        {% if einsatz.klienten_vormittag > 0 and einsatz.fahrer_vormittag is None %}
+                            <td style="background-color:red;color: black; font-weight: bold")>kein Fahrer eingeteilt</td>
+                        {% else %}
+                            <td>{{ einsatz.fahrer_vormittag|default_if_none:"-" }}</td>
+                        {% endif %}
+                        <td>{{ einsatz.klienten_vormittag }}</td>
+                        {% if einsatz.klienten_nachmittag > 0 and einsatz.fahrer_nachmittag is None %}
+                            <td style="background-color:red;color: black; font-weight: bold")>kein Fahrer eingeteilt</td>
+                        {% else %}                        
+                            <td>{{ einsatz.fahrer_nachmittag|default_if_none:"-" }}</td>
+                        {% endif %}
+                        <td>{{ einsatz.klienten_nachmittag }}</td>
+                        <td>
+                        {% if einsatz.klienten_vormittag > 0 or einsatz.klienten_nachmittag > 0 %}
+                            {% load static %}
+                            <a href="/Einsatztage/fahrer/{{ einsatz.id }}/tour/"><img src="{% static "/project/img/fahrplan.png" %}" alt="Tour anzeigen" title="Tour anzeigen"></a>
+                            <a href="/Einsatztage/fahrer/{{ einsatz.id }}/tourAsPDF/"><img src="{% static "/project/img/icon_pdf.png" %}" alt="PDF erzeugen" title="PDF erzeugen"></a>
+                        {% else %}
+                            &nbsp;
+                        {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </table>
+            </div>
+        </form>
+    </div>
 </div>
 
 {% else %}
