--- a/Basis/templates/accounts/login.html
+++ b/Basis/templates/accounts/login.html
@@ -1,8 +1,10 @@
-{% extends 'registration/header.html' %}
+{% extends 'Basis/header.html' %}
 {% load static %}
 {% block content %}
 <div id="content-main">
-    <form action="" method="post" id="login-form">
+    <ul class="object-tools">
+    </ul>  
+<form action="" method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
 
@@ -10,9 +12,17 @@
         {{ hidden_field.errors }}
         {{ hidden_field }}
     {% endfor %}
+    <div>  
+        <fieldset class="module aligned">
+            {% for field in form.visible_fields %}
             <div class="form-row">
+                <div>
                     {{ form.as_p }}
+                </div>
             </div>
+            {% endfor %}
+        </fieldset>
+    </div>
     <div class="submit-row">
         <button type="submit">Login</button>
     </div>
