--- a/Basis/templates/Basis/detail.html
+++ b/Basis/templates/Basis/detail.html
@@ -26,7 +26,7 @@
         </fieldset>
     </div>
     <div class="submit-row">
-        {% if back_button %}<a href="javascript:history.go(-1)" class="closelink">{{ back_button }}</a>{% endif %}
+        {% if back_button %}<a href="javascript:history.go(-1)" class="closelink">{{ back_button|upper }}</a>{% endif %}
         <input type="submit" value="{{ submit_button|default:'Sichern' }}" class="default" name="_save">
         {% if delete_button %}<p class="deletelink-box"><a href="delete/" class="deletelink">{{ delete_button }}</a></p>{% endif %}
     </div>
