--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -7,6 +7,7 @@
         <form id="changelist-form">
             <div class="results">
                 <p style="text-align: center"><bold>Willkommen auf dem Bürgerbus Portal der VG Alzey-Land</bold></p>
+                <p style="text-align: center; padding-top: 50px;"><img src="{% static "project/img/Buergerbus-Projektgruppen.jpg" %}"></p>
             </div>
         </form>
     </div>
