--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,11 @@
 {% extends 'Basis/header.html' %}
 {% load static %}
 {% block content %}
-<div id="content-main">
+<!--script>
+    var body = document.body;
+    body.classList.add("login");
+</script-->
+<div id="content-main" class="aligned">
     <form action="" method="post" id="login-form">
         {% csrf_token %}
         {{ form.non_field_errors }}
@@ -14,7 +18,7 @@
                 {{ form.as_p }}
         </div>
         <div class="submit-row">
-            <button type="submit">Login</button>
+            <input class="default" type="submit" value="Login">
         </div>
     </form>
 </div>
