--- a/Basis/templates/Basis/simple_table.html
+++ b/Basis/templates/Basis/simple_table.html
@@ -6,7 +6,7 @@
     {% if add %}
     <ul class="object-tools">
         <li>
-            <a href="add/" class="addlink">
+            <a href="add/{{ url_args }}" class="addlink">
                 {{ add }} hinzufügen
             </a>
         </li>   
