--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -80,13 +80,19 @@
                 </div>
                 {% endblock breadcrumbs %}
                 {% block messages %}
-					{% if messages %}
-						<ul class="messagelist">
-							{% for message in messages %}
-							<li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message | safe }} </li>
-							{% endfor %}
-						</ul>
-					{% endif %}
+                    {% if form.errors %}
+                    <p class="errornote">
+                        {% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
+                    </p>
+                    {% else %}
+                        {% if messages %}
+                            <ul class="messagelist">
+                                {% for message in messages %}
+                                <li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message | safe }} </li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+                    {% endif %}
                 {% endblock messages %}
             
             <!-- END Suppress header -->
@@ -103,7 +109,7 @@
 				{% block sidebar %}
 					<div class="sidebar scrollable">
 						<div class="sidebar-section logo">
-							<img src="{% static "project/img/buergerbus.jpg" %}">
+							<a href="/"><img src="{% static "project/img/buergerbus.jpg" %}"></a>
                         </div>
                         {% if sidebar_liste %}
                             {% for sidebar in sidebar_liste %}
