--- a/Basis/templates/Basis/simple_table.html
+++ b/Basis/templates/Basis/simple_table.html
@@ -22,7 +22,7 @@
     <div id="changelist" class="module filtered">
         <div id="toolbar">
             {% if filter %}
-            <form action="" method="get">
+            <form id="filter-form" action="" method="get">
                 <p>{{ filter.form }}
                 <input type="submit" value="Filtern" /></p>
             </form>
