--- a/Klienten/templates/Klienten/dsgvo.html
+++ b/Klienten/templates/Klienten/dsgvo.html
@@ -12,7 +12,7 @@ Die Einwilligung erfolgt auf freiwilliger Basis und ich kann sie jederzeit mit W
 Ab Zugang der Widerrufserklärung dürfen meine Daten nicht weiterverarbeitet werden. Sie sind unverzüglich zu löschen. 
 Durch den Widerruf meiner Einwilligung wird die Rechtmäßigkeit der bis dahin erfolgten Verarbeitung nicht berührt.<br>
 <b>Ein weiterer Transport mit dem Bürgerbus ist damit aber ausgeschlossen.</b><br>
-Meine Widerrufserklärung kann ich schriftlich an die Verantwortliche des Bürgerbusses (Frau Rupp, VG Alzey-Land) richten.<br><br>
+Meine Widerrufserklärung kann ich schriftlich an die Verantwortliche des Bürgerbusses (Frau Kerstin Rupp, VG Alzey-Land) richten.<br><br>
 <b>{{ klient.vorname }}&nbsp;{{ klient.nachname }}</b><br>
 <b>{{ klient.ort }}, den ____________________________</b><br>
 <br><br>
