--- a/Basis/templates/Basis/detail.html
+++ b/Basis/templates/Basis/detail.html
@@ -4,34 +4,34 @@
 <div id="content-main">
     <ul class="object-tools">
     </ul>  
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.non_field_errors }}
 
-    {% for hidden_field in form.hidden_fields %}
-        {{ hidden_field.errors }}
-        {{ hidden_field }}
-    {% endfor %}
-    <div>  
-        <fieldset class="module aligned">
-            {% for field in form.visible_fields %}
-            <div class="form-row">
-                <div>
-                    <label {% if field.field.required %}  class=required{% endif %}>{{ field.label }}</label>
-                    {{ field.errors }}
-                    {{ field }}
+        {% for hidden_field in form.hidden_fields %}
+            {{ hidden_field.errors }}
+            {{ hidden_field }}
+        {% endfor %}
+        <div>  
+            <fieldset class="module aligned">
+                {% for field in form.visible_fields %}
+                <div class="form-row">
+                    <div>
+                        <label {% if field.field.required %}  class=required{% endif %}>{{ field.label }}</label>
+                        {{ field.errors }}
+                        {{ field }}
+                        <p class="help">{{ field.help_text }}</p>
+                    </div>
                 </div>
-            </div>
-            {% endfor %}
-        </fieldset>
-    </div>
-    <div class="submit-row">
-        {% if back_button %}<a href="javascript:history.go(-1)" class="closelink">{{ back_button|upper }}</a>{% endif %}
-        <input type="submit" value="{{ submit_button|default:'Sichern' }}" class="default" name="_save">
-        {% if delete_button %}<p class="deletelink-box"><a href="delete/{{ url_args }}" class="deletelink">{{ delete_button }}</a></p>{% endif %}
-    </div>
-     
-</form>
+                {% endfor %}
+            </fieldset>
+        </div>
+        <div class="submit-row">
+            {% if back_button %}<a href="javascript:history.go(-1)" class="closelink">{{ back_button|upper }}</a>{% endif %}
+            <input type="submit" value="{{ submit_button|default:'Sichern' }}" class="default" name="_save">
+            {% if delete_button %}<p class="deletelink-box"><a href="delete/{{ url_args }}" class="deletelink">{{ delete_button }}</a></p>{% endif %}
+        </div>
+        
+    </form>
 </div>
-</script>
 {% endblock %}
