--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -1,8 +1,9 @@
 {% load i18n static jet_tags %}<!DOCTYPE html>
 {% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
 {% jet_get_current_theme as THEME %}
-{% block html %}<html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
-<head>
+{% block html %}
+<html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
+    <head>
         {% block title %}{% endblock %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
         {% load static %}
@@ -17,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "admin/css/changelists.css" %}" />
         <link rel="stylesheet" type="text/css" href="{% static "admin/css/login.css" %}" />
         <link rel="stylesheet" type="text/css" href="{% static "project/css/base.css" %}" />
+        <script type="text/javascript" src="/admin/jsi18n/"></script>
         <script type="text/javascript" charset="utf-8">
             var DATE_FORMAT = "%d.%m.%Y";
             var TIME_FORMAT = "%H:%M:%S";
@@ -25,9 +27,8 @@
         <script type="text/javascript" src="/jet/jsi18n/"></script>
         <script type="text/javascript" src="{% static "jet/js/build/bundle.min.js" %}"></script>
         <script type="text/javascript" src="{% static "jet/js/i18n/jquery-ui/datepicker-de.js" %}"></script>
-        <script type="text/javascript" src="{% static "jet/js/i18n/jquery-ui-timepicker/jquery.ui.timepicker-de.js" %}"></script>
+        <script type="text/javascript" src="{% static "project/js/jquery.ui.timepicker-bb.js" %}"></script>
         <script type="text/javascript" src="{% static "jet/js/i18n/select2/de.js" %}"></script>
-        <script type="text/javascript" src="/admin/jsi18n/"></script>
         <script type="text/javascript" src="{% static "admin/js/vendor/jquery/jquery.js" %}"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script type="text/javascript" src="{% static "smart-selects/admin/js/chainedfk.js" %}"></script>
@@ -41,7 +42,7 @@
         <script type="text/javascript" src="{% static "admin/js/urlify.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/prepopulate.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/vendor/xregexp/xregexp.js" %}"></script>
-   </head>
+    </head>
     <body class="menu-pinned change-list">
         <!-- Container -->
         <div id="container">
@@ -71,45 +72,44 @@
                         {% endif %} 
                     {% endblock usertools %}
                 {% endif %}
-                </div>
-                <!-- END Header -->
-                {% block breadcrumbs %}
-                <div class="breadcrumbs">
-                <!--a href="{% url 'admin:index' %}">{% trans 'Home' %}</a-->
-                {% if title %} &rsaquo; {{ title }}{% endif %}
-                </div>
-                {% endblock breadcrumbs %}
-                {% block messages %}
-                    {% if form.errors %}
-                    <p class="errornote">
-                        {% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
-                    </p>
-                    {% else %}
-                        {% if messages %}
-                            <ul class="messagelist">
-                                {% for message in messages %}
-                                <li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message | safe }} </li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
+            </div>
+            <!-- END Header -->
+            {% block breadcrumbs %}
+            <div class="breadcrumbs">
+            <!--a href="{% url 'admin:index' %}">{% trans 'Home' %}</a-->
+            {% if title %} &rsaquo; {{ title }}{% endif %}
+            </div>
+            {% endblock breadcrumbs %}
+            {% block messages %}
+                {% if form.errors %}
+                <p class="errornote">
+                    {% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
+                </p>
+                {% else %}
+                    {% if messages %}
+                        <ul class="messagelist">
+                            {% for message in messages %}
+                            <li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message | safe }} </li>
+                            {% endfor %}
+                        </ul>
                     {% endif %}
-                {% endblock messages %}
-            
+                {% endif %}
+            {% endblock messages %}
             <!-- END Suppress header -->
             <!-- Content -->
             {% if title %}<title>{{ title }}</title>{% endif %}
-			<div id="content" class="{% block coltype %}colM{% endblock %}">
-				{% block pretitle %}{% endblock %}
-				{% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+            <div id="content" class="{% block coltype %}colM{% endblock %}">
+                {% block pretitle %}{% endblock %}
+                {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
                 {% block content %}
-				{% block object-tools %}{% endblock %}
-				{{ content }}
-				{% endblock %}
-				<!-- Sidebar -->
-				{% block sidebar %}
-					<div class="sidebar scrollable">
-						<div class="sidebar-section logo">
-							<a href="/"><img src="{% static "project/img/buergerbus.jpg" %}"></a>
+                {% block object-tools %}{% endblock %}
+                {{ content }}
+                {% endblock %}
+                <!-- Sidebar -->
+                {% block sidebar %}
+                    <div class="sidebar scrollable">
+                        <div class="sidebar-section logo">
+                            <a href="/"><img src="{% static "project/img/buergerbus.jpg" %}"></a>
                         </div>
                         {% if sidebar_liste %}
                             {% for sidebar in sidebar_liste %}
@@ -130,14 +130,15 @@
                             </div>
                             {% endfor %}
                         {% endif %}
-					</div>
-				{% endblock %}
-				<!-- END Sidebar -->
-				<br class="clear" />
-			</div>
-    		<!-- END Content -->
-        </body>
-        <footer> </footer>
-    </div>
-    <!-- END Container -->
-</html>{% endblock %}
+                    </div>
+                {% endblock %}
+                <!-- END Sidebar -->
+                <br class="clear" />
+            </div>
+            <!-- END Content -->
+        </div>
+        <!-- END Container -->
+    </body>
+    <footer> </footer>    
+</html>
+{% endblock %}
