--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -109,7 +109,7 @@
                 {% block sidebar %}
                     <div class="sidebar scrollable">
                         <div class="sidebar-section logo">
-                            <a href="/"><img src="{% static "project/img/buergerbus.jpg" %}"></a>
+                            <a href="/"><img src="{% static "project/img/buergerbus.jpg" %}" alt="Start" title="Start"></a>
                         </div>
                         {% if sidebar_liste %}
                             {% for sidebar in sidebar_liste %}
