--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -5,6 +5,25 @@
     <div id="changelist" class="module filtered">
         <div id="toolbar"></div>
         <form id="changelist-form">
+            <div class="flow">
+                <div class="sidebar-section">
+                    <span class="sidebar-title">Ablauf</span>
+                </div>
+                <div class="sidebar-section">
+                    <a class="sidebar-link" href="Klienten/dienstleister/">Dienstleister vorhanden ?</a>
+                    <a class="sidebar-link" href="Klienten/dienstleister/add/"><span class="sidebar-right-arrow icon-arrow-right"></span>anlegen</a>
+                </div>
+                <div class="sidebar-section">
+                    <a class="sidebar-link" href="Klienten/fahrgaeste/">Fahrgast vorhanden ?</a>
+                    <a class="sidebar-link" href="Klienten/fahrgaeste/add/"><span class="sidebar-right-arrow icon-arrow-right"></span>anlegen</a>
+                </div>
+                <div class="sidebar-section">
+                    <a class="sidebar-link" href="Klienten/fahrgaeste/"><img src="{% static "project/img/fahrplan.png" %}" alt="Tour hinzuf&uuml;gen" title="Tour hinzuf&uuml;gen">&nbsp;Fahrgast für Tour auswählen</a>
+                </div>
+                <div class="sidebar-section">
+                        <a class="sidebar-link" href="Tour/tour/">Tour anzeigen</a>
+                </div>
+            </div>
             <div class="results">
                 <p style="text-align: center"><bold>Willkommen auf dem Bürgerbus Portal der VG Alzey-Land</bold></p>
                 <p style="text-align: center; padding-top: 50px;"><img src="{% static "project/img/Buergerbus-Projektgruppen.jpg" %}"></p>
