--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -23,6 +23,9 @@
                 <div class="sidebar-section">
                         <a class="sidebar-link" href="Tour/tour/">Tour anzeigen</a>
                 </div>
+                <div class="sidebar-section">
+                        <a class="sidebar-link" href="Einsatztage/fahrer/">Fahrtage anzeigen und als Email verschicken</a>
+                </div>                
             </div>
             <div class="results">
                 <p style="text-align: center"><bold>Willkommen auf dem Bürgerbus Portal der VG Alzey-Land</bold></p>
