--- a/static/project/css/base.css
+++ b/static/project/css/base.css
@@ -182,3 +182,6 @@ input[type="text"], input[type="email"], input[type="password"], input[type="url
 div.breadcrumbs {
     color: #38547e;
 }
+.datetimeshortcuts {
+    display: none;
+}
