10/25 delete error message on ListView

--- a/Basis/templates/Basis/index.html
+++ b/Basis/templates/Basis/index.html
@@ -28,8 +28,8 @@
                 </div>                
             </div>
             <div class="results">
-                <p style="text-align: center"><bold>Willkommen auf dem Bürgerbus Portal der VG Alzey-Land</bold></p>
-                <p style="text-align: center; padding-top: 50px;"><img src="{% static "project/img/Buergerbus-Projektgruppen.jpg" %}"></p>
+                <p style="text-align: center; padding-left: 220px;"><bold>Willkommen auf dem Bürgerbus Portal der VG Alzey-Land</bold></p>
+                <p style="text-align: center; padding-top: 50px; padding-left: 220px;"><img src="{% static "project/img/Buergerbus-Projektgruppen.jpg" %}"></p>
             </div>
         </form>
     </div>
