--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -7,6 +7,7 @@
         {% block title %}{% endblock %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
         {% load static %}
+        <link rel="shortcut icon" href="{% static "project/img/favicon.ico" %}" type="img/ico"/>
         <link rel="stylesheet" type="text/css" href="{% static "admin/css/base.css" %}" />
         <link rel="stylesheet" type="text/css" href="{% static "jet/css/vendor.css" %}" />
         <link rel="stylesheet" type="text/css" href="{% static "jet/css/icons/style.css" %}" />
@@ -46,7 +47,7 @@
     <body class="menu-pinned change-list">
         <!-- Container -->
         <div id="container">
-            <!-- Suppress header -->
+           <!-- Suppress header -->
             <!-- Header -->
             <div id="header">
                 <div id="title">VG Alzey-Land Bürgerbus Portal</div>
