--- a/Basis/templates/Basis/header.html
+++ b/Basis/templates/Basis/header.html
@@ -43,11 +43,12 @@
         <script type="text/javascript" src="{% static "admin/js/urlify.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/prepopulate.js" %}"></script>
         <script type="text/javascript" src="{% static "admin/js/vendor/xregexp/xregexp.js" %}"></script>
+        <script type="text/javascript">function dismissAddAnotherPopup(win) {win.close();}</script>
     </head>
-    <body class="menu-pinned change-list">
+    <body class="menu-pinned change-list {% if popup %}popup{% endif %}">
         <!-- Container -->
         <div id="container">
-           <!-- Suppress header -->
+            <!-- Suppress header -->
             <!-- Header -->
             <div id="header">
                 <div id="title">VG Alzey-Land Bürgerbus Portal</div>
